--- a/devslopes-social/Base.lproj/Main.storyboard
+++ b/devslopes-social/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina3_5" orientation="portrait">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,13 +19,112 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IJk-UQ-ISz">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="20"/>
+                                <color key="backgroundColor" red="0.0" green="0.36078431372549019" blue="0.69803921568627447" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="0lT-5F-fow"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yZS-Jm-s5c">
+                                <rect key="frame" x="0.0" y="518" width="320" height="50"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="If you haven't signed in before, an account will be automatically created for you" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E7z-gv-yLc">
+                                        <rect key="frame" x="8" y="8" width="304" height="34"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="12"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.36078431372549019" blue="0.69803921568627447" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="E7z-gv-yLc" firstAttribute="trailing" secondItem="yZS-Jm-s5c" secondAttribute="trailingMargin" id="5Pv-eG-Mdw"/>
+                                    <constraint firstItem="E7z-gv-yLc" firstAttribute="top" secondItem="yZS-Jm-s5c" secondAttribute="topMargin" id="IhR-F1-74P"/>
+                                    <constraint firstAttribute="height" constant="50" id="RH4-QI-byR"/>
+                                    <constraint firstItem="E7z-gv-yLc" firstAttribute="bottom" secondItem="yZS-Jm-s5c" secondAttribute="bottomMargin" id="SK1-Ms-joY"/>
+                                    <constraint firstItem="E7z-gv-yLc" firstAttribute="leading" secondItem="yZS-Jm-s5c" secondAttribute="leadingMargin" id="pJq-br-4D0"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select a sign in method" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zab-al-1n0">
+                                <rect key="frame" x="16" y="28" width="288" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="9S5-rb-XlR"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qKn-RR-X7z">
+                                <rect key="frame" x="122.5" y="68" width="75" height="75"/>
+                                <color key="backgroundColor" red="0.23137254901960785" green="0.34901960784313724" blue="0.59607843137254901" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="75" id="J9w-K1-V0z"/>
+                                    <constraint firstAttribute="height" constant="75" id="oEI-ox-HEk"/>
+                                </constraints>
+                                <state key="normal" image="f"/>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email Address" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aZ9-Ra-bB0">
+                                <rect key="frame" x="35" y="163" width="250" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="nUL-Kr-zaA"/>
+                                </constraints>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.87486622430000005" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uMP-Al-7KM">
+                                <rect key="frame" x="35" y="213" width="250" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="iU7-PA-Q6T"/>
+                                </constraints>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.87486622430000005" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VdE-vC-Gml">
+                                <rect key="frame" x="110" y="263" width="100" height="30"/>
+                                <color key="backgroundColor" red="0.0" green="0.36078431372549019" blue="0.69803921568627447" alpha="0.87486622431506844" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="gaH-uu-CcG"/>
+                                    <constraint firstAttribute="height" constant="30" id="oRJ-GV-339"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <state key="normal" title="Sign In">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="VdE-vC-Gml" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8cy-pL-y2M"/>
+                            <constraint firstItem="qKn-RR-X7z" firstAttribute="top" secondItem="zab-al-1n0" secondAttribute="bottom" constant="20" id="8f2-Ym-ZcP"/>
+                            <constraint firstItem="aZ9-Ra-bB0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="JaO-oS-udk"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="yZS-Jm-s5c" secondAttribute="bottom" id="MWK-Pe-OJb"/>
+                            <constraint firstAttribute="trailing" secondItem="IJk-UQ-ISz" secondAttribute="trailing" id="QPa-LA-1DV"/>
+                            <constraint firstItem="zab-al-1n0" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Typ-2I-P6Q"/>
+                            <constraint firstItem="IJk-UQ-ISz" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Whm-ih-Zki"/>
+                            <constraint firstItem="zab-al-1n0" firstAttribute="top" secondItem="IJk-UQ-ISz" secondAttribute="bottom" constant="8" id="WjT-7f-PHV"/>
+                            <constraint firstItem="qKn-RR-X7z" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="YYG-HI-F7K"/>
+                            <constraint firstItem="uMP-Al-7KM" firstAttribute="top" secondItem="aZ9-Ra-bB0" secondAttribute="bottom" constant="20" id="deI-iN-kyI"/>
+                            <constraint firstItem="IJk-UQ-ISz" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="dwX-Dc-cgo"/>
+                            <constraint firstItem="VdE-vC-Gml" firstAttribute="top" secondItem="uMP-Al-7KM" secondAttribute="bottom" constant="20" id="e7T-E1-nBG"/>
+                            <constraint firstItem="uMP-Al-7KM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gyg-ln-Kvv"/>
+                            <constraint firstItem="yZS-Jm-s5c" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="j6e-BC-twI"/>
+                            <constraint firstAttribute="trailing" secondItem="yZS-Jm-s5c" secondAttribute="trailing" id="rcG-wv-q3s"/>
+                            <constraint firstItem="zab-al-1n0" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="tOX-6E-S8I"/>
+                            <constraint firstItem="aZ9-Ra-bB0" firstAttribute="top" secondItem="qKn-RR-X7z" secondAttribute="bottom" constant="20" id="zQF-sk-9Sf"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="204.375" y="172.5"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="f" width="352" height="328"/>
+    </resources>
 </document>
