--- a/devslopes-social/Base.lproj/Main.storyboard
+++ b/devslopes-social/Base.lproj/Main.storyboard
@@ -137,17 +137,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8i3-1o-h9Y">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="55"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sign-out" translatesAutoresizingMaskIntoConstraints="NO" id="hxe-dV-twx">
-                                        <rect key="frame" x="16" y="22" width="30" height="30"/>
+                                        <rect key="frame" x="16" y="17" width="30" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="Ive-qa-T2P"/>
                                             <constraint firstAttribute="width" constant="30" id="hKQ-9c-ABu"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Feed" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nio-Pj-bpo">
-                                        <rect key="frame" x="137.5" y="27" width="100" height="25"/>
+                                        <rect key="frame" x="137.5" y="22" width="100" height="25"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="100" id="AF8-oE-caX"/>
                                             <constraint firstAttribute="height" constant="25" id="SGg-kQ-bd9"/>
@@ -163,18 +163,18 @@
                                     <constraint firstItem="Nio-Pj-bpo" firstAttribute="centerX" secondItem="8i3-1o-h9Y" secondAttribute="centerX" id="Y5f-lU-o2b"/>
                                     <constraint firstItem="hxe-dV-twx" firstAttribute="leading" secondItem="8i3-1o-h9Y" secondAttribute="leading" constant="16" id="ZcJ-Ia-gsA"/>
                                     <constraint firstAttribute="bottom" secondItem="Nio-Pj-bpo" secondAttribute="bottom" constant="8" id="oo0-Hv-xyg"/>
-                                    <constraint firstAttribute="height" constant="60" id="sFW-fk-dUf"/>
+                                    <constraint firstAttribute="height" constant="55" id="sFW-fk-dUf"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="400" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="JBG-t5-32a">
-                                <rect key="frame" x="0.0" y="144" width="375" height="523"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="400" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="JBG-t5-32a">
+                                <rect key="frame" x="0.0" y="147" width="375" height="520"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="400" id="9fs-s1-J1T">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="400" id="9fs-s1-J1T" customClass="PostCell" customModule="devslopes_social" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="400"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9fs-s1-J1T" id="oX5-KJ-WzP">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="400"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="399.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wSJ-BJ-xJW" customClass="FancyView" customModule="devslopes_social" customModuleProvider="target">
@@ -198,7 +198,7 @@
                                                                             <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
-                                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="empty-heart" translatesAutoresizingMaskIntoConstraints="NO" id="uYX-zY-uBM" customClass="CircleView" customModule="devslopes_social" customModuleProvider="target">
+                                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="empty-heart" translatesAutoresizingMaskIntoConstraints="NO" id="uYX-zY-uBM">
                                                                             <rect key="frame" x="282" y="0.0" width="45" height="45"/>
                                                                             <constraints>
                                                                                 <constraint firstAttribute="width" constant="45" id="A7L-01-2Hr"/>
@@ -207,12 +207,15 @@
                                                                         </imageView>
                                                                     </subviews>
                                                                 </stackView>
-                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="A4m-jg-82q">
-                                                                    <rect key="frame" x="0.0" y="50" width="327" height="174.5"/>
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="A4m-jg-82q">
+                                                                    <rect key="frame" x="0.0" y="50" width="327" height="194.5"/>
                                                                 </imageView>
                                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="9q2-25-pDl">
-                                                                    <rect key="frame" x="0.0" y="229.5" width="327" height="80"/>
+                                                                    <rect key="frame" x="0.0" y="249.5" width="327" height="60"/>
                                                                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="VvB-sU-MQP"/>
+                                                                    </constraints>
                                                                     <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -220,17 +223,17 @@
                                                             </subviews>
                                                         </stackView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="gi0-5q-LF5">
-                                                            <rect key="frame" x="254.5" y="336" width="80.5" height="23.5"/>
+                                                            <rect key="frame" x="255" y="336" width="80" height="23.5"/>
                                                             <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Likes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mPD-8H-54Z">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="37.5" height="23.5"/>
-                                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Likes:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mPD-8H-54Z">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="43.5" height="23.5"/>
+                                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="14"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="6666" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="43J-vy-jVa">
-                                                                    <rect key="frame" x="42.5" y="0.0" width="38" height="23.5"/>
-                                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="6666" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="43J-vy-jVa">
+                                                                    <rect key="frame" x="48.5" y="0.0" width="31.5" height="23.5"/>
+                                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="14"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
@@ -260,11 +263,18 @@
                                                 <constraint firstItem="wSJ-BJ-xJW" firstAttribute="leading" secondItem="oX5-KJ-WzP" secondAttribute="leading" constant="16" id="h5A-Bw-Xu2"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="caption" destination="9q2-25-pDl" id="qns-d5-A4E"/>
+                                            <outlet property="likesLbl" destination="43J-vy-jVa" id="8EF-CJ-uWy"/>
+                                            <outlet property="postImg" destination="A4m-jg-82q" id="hxJ-uf-oCG"/>
+                                            <outlet property="profileImg" destination="d7c-5Q-yTz" id="MmM-Mc-GWf"/>
+                                            <outlet property="usernameLbl" destination="QSI-ob-csW" id="mNB-Bo-Bh4"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BIG-AW-ARO" customClass="FancyView" customModule="devslopes_social" customModuleProvider="target">
-                                <rect key="frame" x="16" y="76" width="343" height="60"/>
+                                <rect key="frame" x="16" y="71" width="343" height="60"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="NK4-7F-jfH">
                                         <rect key="frame" x="8" y="8" width="327" height="44"/>
@@ -314,7 +324,7 @@
                             <constraint firstItem="BIG-AW-ARO" firstAttribute="top" secondItem="8i3-1o-h9Y" secondAttribute="bottom" constant="16" id="dGA-1y-PAy"/>
                             <constraint firstItem="BIG-AW-ARO" firstAttribute="leading" secondItem="9jK-QI-Ku9" secondAttribute="leading" constant="16" id="eVb-xI-pY6"/>
                             <constraint firstItem="8i3-1o-h9Y" firstAttribute="top" secondItem="9jK-QI-Ku9" secondAttribute="top" id="fZt-4e-xIA"/>
-                            <constraint firstItem="JBG-t5-32a" firstAttribute="top" secondItem="BIG-AW-ARO" secondAttribute="bottom" constant="8" id="jr3-q5-NiC"/>
+                            <constraint firstItem="JBG-t5-32a" firstAttribute="top" secondItem="BIG-AW-ARO" secondAttribute="bottom" constant="16" id="jr3-q5-NiC"/>
                             <constraint firstItem="JBG-t5-32a" firstAttribute="leading" secondItem="9jK-QI-Ku9" secondAttribute="leading" id="l32-qh-hja"/>
                             <constraint firstAttribute="trailing" secondItem="8i3-1o-h9Y" secondAttribute="trailing" id="o4l-3d-brG"/>
                             <constraint firstAttribute="trailing" secondItem="JBG-t5-32a" secondAttribute="trailing" id="rc2-xN-RzH"/>
@@ -322,6 +332,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="tableView" destination="JBG-t5-32a" id="kmK-0A-xv9"/>
                         <segue destination="BYZ-38-t0r" kind="show" identifier="goToSignIn" id="gNg-xu-1bL"/>
                     </connections>
                 </viewController>
