Added Firebase Post Functionality

--- a/devslopes-social/Base.lproj/Main.storyboard
+++ b/devslopes-social/Base.lproj/Main.storyboard
@@ -197,7 +197,7 @@
                                                                                 <constraint firstAttribute="width" constant="45" id="rBF-qe-stR"/>
                                                                             </constraints>
                                                                         </imageView>
-                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QSI-ob-csW">
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="username" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QSI-ob-csW">
                                                                             <rect key="frame" x="45" y="0.0" width="237" height="45"/>
                                                                             <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
                                                                             <nil key="highlightedColor"/>
